# scrapybara-demos

./: .cursorrules  .env.example  README.md  pyproject.toml
dungeon-crawler/: README.md  main.py  pyproject.toml
resume-builder/: .env.example  README.md  main.py  pyproject.toml
scrapybara-cli/: .env.example  .gitignore  README.md  pyproject.toml
scrapybara-cli/src/: agent.py  helpers.py  main.py  prompt.py
teleo/: .env.example  README.md  forge.config.js  index.html  main.js  package.json
w25-scraping/: README.md  main.py  pyproject.toml
website-copycat/: .env.example  README.md  main.py  pyproject.toml
