[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapybara-cli"
version = "0.1.6"
description = "CLI tool for controlling virtual machines with Claude"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "typer>=0.9.0",
    "anthropic>=0.18.1",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "scrapybara>=0.1.0",
    "httpx==0.27",
]

[project.scripts]
scrapybara-cli = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system.sdist]
include = [
    "/src",
    "README.md",
    "LICENSE",
]

[build-system.wheel]
packages = ["src"]
